--- a/src/index.css
+++ b/src/index.css
@@ -265,9 +265,11 @@ Cocktail
   font-size: 2rem;
 }
 .cocktail-footer p {
-  color: var(--darkGrey);
+  color: #1b5d55;
+  font-weight: 400;
   margin-bottom: 0.5rem;
 }
+
 /* 
 ====== 
 Form
